--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Child theme for Westwood One",
   "main": "index.js",
   "scripts": {
+    "start": "wp-scripts start",
     "build": "wp-scripts build",
     "check-engines": "wp-scripts check-engines",
     "check-licenses": "wp-scripts check-licenses",
@@ -14,7 +15,7 @@
     "lint:md:js": "wp-scripts lint-md-js",
     "lint:pkg-json": "wp-scripts lint-pkg-json",
     "packages-update": "wp-scripts packages-update",
-    "start": "wp-scripts start"
+    "full-upgrade": "npm update; npm run packages-update; npm upgrade"
   },
   "repository": {
     "type": "git",
@@ -34,7 +35,7 @@
   },
   "homepage": "https://github.com/cumulus-digital/wp-wwo-child#readme",
   "devDependencies": {
-    "@wordpress/scripts": "^22.2.1",
+    "@wordpress/scripts": "^22.5.0",
     "hc-offcanvas-nav": "^6.1.3",
     "jquery": "^3.6.0"
   },
